# ChangeLog for x11-misc/synergy
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.123 2015/03/09 11:15:41 jer Exp $

*synergy-1.7.0 (09 Mar 2015)

  09 Mar 2015; Jeroen Roovers <jer@gentoo.org> +synergy-1.7.0.ebuild:
  Version bump.

*synergy-1.6.2 (04 Dec 2014)

  04 Dec 2014; Jeroen Roovers <jer@gentoo.org> +synergy-1.6.2.ebuild:
  Version bump (bug #531608).

  11 Nov 2014; Jeroen Roovers <jer@gentoo.org> synergy-1.6.1.ebuild:
  net-dns/avahi is only required with USE=qt4 (bug #528818 by Martin
  Kletzander).

  08 Nov 2014; Jeroen Roovers <jer@gentoo.org> synergy-1.6.1.ebuild:
  Add extra HOMEPAGE.

*synergy-1.6.1 (08 Nov 2014)

  08 Nov 2014; Jeroen Roovers <jer@gentoo.org> +synergy-1.6.1.ebuild:
  Version bump.

*synergy-1.5.1_p2398 (06 Oct 2014)

  06 Oct 2014; Jeroen Roovers <jer@gentoo.org> +synergy-1.5.1_p2398.ebuild:
  Version bump (bug #524566 by Thanh Ha).

  09 Aug 2014; Jeroen Roovers <jer@gentoo.org> -synergy-1.4.15.ebuild,
  synergy-1.4.16_p1969.ebuild, synergy-1.5.0_p2278.ebuild,
  -files/synergy-1.4.12-pthread.patch:
  Fix DESCRIPTION.

  03 Aug 2014; Agostino Sarubbo <ago@gentoo.org> synergy-1.4.16_p1969.ebuild:
  Stable for ppc, wrt bug #509656

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> synergy-1.4.16_p1969.ebuild:
  Stable for ppc64, wrt bug #509656

*synergy-1.5.0_p2278 (16 Jul 2014)

  16 Jul 2014; Jeroen Roovers <jer@gentoo.org> -synergy-1.4.17_p2055.ebuild,
  +synergy-1.5.0_p2278.ebuild:
  Version bump by Antek Grzymała (antoszka) (bug #509656 comment #3).

  16 Jul 2014; Chema Alonso <nimiux@gentoo.org> synergy-1.4.16_p1969.ebuild:
  Stable for amd64 wrt bug #509656

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  synergy-1.4.16_p1969.ebuild:
  x86 stable wrt bug #509656

  08 May 2014; Jeroen Roovers <jer@gentoo.org> synergy-1.4.15.ebuild,
  synergy-1.4.16_p1969.ebuild, synergy-1.4.17_p2055.ebuild: