@@ -12,6 +12,7 @@ DIST synergy-1.5.0-r2278-Source.tar.gz 4350894 SHA256 66bf6016a2e71b2b2b26fc445d
 DIST synergy-1.5.1-r2398-Source.tar.gz 4350720 SHA256 c70cc5bbec47ea22bdc34107a1788cc37143c0fd8d8c4affba4f0257c26408a7 SHA512 793d502955a035b9032713ffbfa136328994f03a8d84000de1f062c56ce172d6e8667243a3aa728d9646760c5d54a56d9a1b75f7ea11e7e28b50e2793d6db633 WHIRLPOOL 7f9d893a0d2cfa8c5aeab948f22ad5730507b7007bf013b0916b36b392859b328a635dd7d7e196246cd634c6de410235d0e38037d860b00856d86128c47801a0
 DIST synergy-1.6.1.tar.gz 4404494 SHA256 7cd07198f70511f8555bf6e4520c118522a89b4ab6c6af96f1547f254bba0257 SHA512 b71102ca1e6f9bbcaf4b904287cdbaa73bfa18dc1ab54fb3e01a8ea23ba508e4e49924ba1cd2c76805882cafd059bac406509508171981c0a9b91e5711f1960a WHIRLPOOL 4dd17cdbe0fb9b7ebb6d5630528894c94c56930aac1c5eafe34833e56517fe687da31f65648fc804dfb03214a366c605a16ad3f0fce805aabac69372393ccf7b
 DIST synergy-1.6.2.tar.gz 4411385 SHA256 36c0a2c9ea1c3a13a6134ce1e76ad8dd2f442100dd6075c53f31b399d2543ba3 SHA512 197b399a96177ab8f493bdea439dffb1d153d120fc102dd66518681c5af7ec35f526f4c8a76efad36fe46f6fd9d332feb0d38ae969d5fd2bb6653fd8731ff11e WHIRLPOOL 76c9684489e7f9d42d2d1685e248ce3d57693b0c57dd5cd7cf8e0d827982c13546f00bfcbe4f7e88082c67659c69e5a841f640bb66a07560ac11d467095f60f4
+DIST synergy-1.6.3.tar.gz 4405517 SHA256 93b1965b8e0cfc55cc654aab7053a58b9e730d09e68bbc520be32353a01dce1a SHA512 de67b0663c5ef411570f163208b2a295a8f16537dcc37a41a31039a2d01de083410c023b7f255664eb0c84f0290473690b638934082c2276ddce594126861165 WHIRLPOOL cb8737f0fe75105c9f5c8c371a5aef55c5eb8f1c419b3a7315ed66880e79c379efc6d7bced20c0d046bc281be935322def54f98d67e383d7236620a948ae1c14
 DIST synergy-1.7.0.tar.gz 8990045 SHA256 7f51c0e8ed76aec7fb14a02592248e807cb068913e154abf4ce7e326053ef4c0 SHA512 29c8c2f4d4784a45503332684f9217483f40df0ee4ee371e80411a21679234c7d34a4ada73fd4ba2218b39a9976943e8eed082152e7ef353eafeeea6bed73363 WHIRLPOOL 082944bbdc0571a1fd8c61db5c8f92b17e0f5266481b8187781d6590473c801b43b2dc08fd845876bc7ad8660a8bb739cb9347cec3d455d36230f91f58897721
 DIST synergy.png 26910 SHA256 c7e6cbaea549a189daed46c7170477772d932144ca20c9ea0db6859bd896f08c SHA512 0b5a1813c71fd2923adca4cf7b0f840fc37c73a2f18ad68f8bb2fd2ea312d9a884e2e2bcd78f6dd0f13d1f31ea3991379e141ec62d970a18c3a9c46b26720c5d WHIRLPOOL 7b3e7f9b05462fb536de0ca8d2257ea8abc0b2f17f0335d7eee73322f79a9ecccf729b992e58cd0965a9c9842f48020b6588cd4af47ea0f6d2b2cd7793c64e3a
 EBUILD synergy-1.4.16_p1969.ebuild 2032 SHA256 ee2d96126510629a752fb3757df4808ff1c9c774e7d8483d5e3704f28d907240 SHA512 1212ff942fc22931f8cfe143141e21cd4e6d31850b121add5cbf10194a9cbe9ef6f4efd2697660323ec127f04301bdb7fb9a0d0e634c08626eccf8709ad66b20 WHIRLPOOL 16cd8ec3f2c46a88ae1ff703f66b0743a14ecb04dc004f25a98e6006f6d4d116912b1f3d5c3417a7f419d52c8ceb9154a42f2c4480dd4445dc9b036abd36ed43
@@ -19,13 +20,14 @@ EBUILD synergy-1.5.0_p2278.ebuild 2489 SHA256 0f2168503733b6e1c93a179ccedae49983
 EBUILD synergy-1.5.1_p2398.ebuild 2489 SHA256 50639c2682a958d11a0918f74b8b1e63b9ec654fc51ae012db30456f78871b54 SHA512 97bcf3df8adf1e1c91b104ab31020c8002c73ab12fdec2ffdaa95bf54d7e72868e3ae29df0595da0f42aa330eb5375720c01e6e4cefbf967fbe70c5e36a6cafb WHIRLPOOL 96c348eb25fcc07ede494617ce1fb262e5f90792ca06ecf20414704be64f6b464b195a2cc207abf715c7a10bd5ffcf0bf558aff783ee244e84ed39bbbd134e1a
 EBUILD synergy-1.6.1.ebuild 2546 SHA256 77f7d1f938aa664415d058671104830602e854dfd90f645a690630378ee1226c SHA512 3f77bf471cafc5e5310a935c99efa1c98bc2d6fa6c754900bf0f707e3631b4f0fd3839e4979d514c8fa81b0d267ac3069ecee740ffdbf1d5b5f4e8943519fd25 WHIRLPOOL facf6a59ee9d7490f90966b87ac309c7795364f406955c424b0d73571ee88a57263211a6fc084627b00883bfecb78f7878342982393966696417ef35a343190c
 EBUILD synergy-1.6.2.ebuild 2546 SHA256 a41f87c18212f748e128807dc0caa64c19c28ba6bd25e4003f398863083a9ae7 SHA512 f9c7d892f03b414988d2d07fb9d865a07089927b50295848de78860a367536b55fe24b12f2bd2346c28caf26a7dcaa917be36e8f7fb477194f9892e7e768d200 WHIRLPOOL dbbc7f9b8d506ee581e08120323157dab2542a10ab6409589eb6b38aaeac9bdc3b021b8dc785b6c67454bbcf57cb6f016282e71bf3743d3c81b32d4f04e94eb7
+EBUILD synergy-1.6.3.ebuild 2546 SHA256 7c75b89aef317340936808c8185d5dc20aaeca8d556e11ec8421704208b22f2e SHA512 3e77d2bfe8b54d4562bbd123010f38bb8a71c7b554b070d402ffe597f8798d99f6fedd72d398f8e5c49e68de878e16bddb42062a3adb8e0c4ab871c7d2258fd4 WHIRLPOOL 413c38357377d986eb50509c365b47f05b6bd24bfed3892ba1730c4b58f2025d5a66e60648089243626ddd56392f01ae13f9bd0ac86228571d72e294df72256a
 EBUILD synergy-1.7.0.ebuild 2497 SHA256 922d560517f004b38e2a0212e98cbffa4e25f833aa304d42389996b39abbb09c SHA512 e76e58f0e5da47681d9cba069ec24feddc504e96e7ce5542169e0030c4ddf1258734ee401993121ede2d8611d67f96255a57d082991b2fd405f4d31faf8a3c3b WHIRLPOOL c821630929a3399119ff28a62ce214894f563afef769b2f8a42516927773eeb10ab4eadc204b45988b0b1a75fc57a04380d0549449b76da50ad9ed25c4ab0cc3
-MISC ChangeLog 17466 SHA256 2d42360df50b1f585b77677d2d7e30728da01ecf5138aa27b7c8547b188de5ad SHA512 801c1a1221a212a7bf6b1bdb398c29d3eb2841a2fec448d842cadc3c158ad9bfc7e9bac31d1cce184e53527e24ec1321022dcc7ac58eb59326caa2ee60878f23 WHIRLPOOL 6bd9877bf07306561190308be7bedffa775077407559766d61591d20bd66363d13d9f6d6ad0f541f2946117eee706e3eea65388003e87cf3edec15009160d24a
+MISC ChangeLog 17608 SHA256 daabb87ff091c51e029a8a77d4f4e86217bea0c3b806c71cb9388615ed74a0b1 SHA512 c50c8f8df0ab4ab4dc1f7642785cf9f846ee9660d5e05fbc6a47a92a378c20fac259a08b2b1581bd1007d3bc2f0167109b45873dda0cd0c5094e2a415bec8f46 WHIRLPOOL 54f17584f6cd44f836b81bd6cff55aadde6d0367d5b5590bd43f386f56f1b96e19663ae9dfb8586a7ce360f6516d132a8664fd9d854e60f95a76d5d11719315d
 MISC metadata.xml 243 SHA256 16d6a09278140777930f22eeaf42238d2a5168e539c14f8fd7b1b2be1132539c SHA512 86dc9a5aecb9dfdabe223750574bb8469e4dd4fb89e3ea5b2a683de1f68c5829460c60d16d8a748c17f2b6daf3561d054aa5283f6a37c52a8a60fba6ebbfce14 WHIRLPOOL 9e7beb2b0a4715dcd6a1d9d22c0ce9f82b9871dabdb2693dc4f11589bb0a1aa807855fdfda2d415b0807f5e31c3e4ced43e97e2c761c967452e5bc1e52e81df5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT9gN8ACgkQVWmRsqeSphPTcwCeKt4cWufCmlnDniAtdOZsmT8l
-7UgAnjHt/SE6czOpRKr2jiECgGFDrLrE
-=h83V
+iEYEAREIAAYFAlUkqngACgkQVWmRsqeSphMgjwCfR9JSNMeNG/kWpVuNXQjh+2ZO
+mjYAn0GQ1cgh0twFK0G+uUfWY0FS69qI
+=53oo
 -----END PGP SIGNATURE-----
