@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/synergy
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.123 2015/03/09 11:15:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.124 2015/04/08 04:11:35 jer Exp $
+
+*synergy-1.6.3 (08 Apr 2015)
+
+  08 Apr 2015; Jeroen Roovers <jer@gentoo.org> +synergy-1.6.3.ebuild:
+  Version bump (bug #545884 by wyvern5).
 
 *synergy-1.7.0 (09 Mar 2015)
 
